--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -1,76 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <io.codetail.widget.RevealLinearLayout
         android:id="@+id/ovContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/budgetContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:orientation="horizontal"
-            android:background="#FFF"
-            android:elevation="3dp">
+            android:layout_margin="8dp"
+            app:cardElevation="4dp"
+            app:contentPadding="12dp">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center">
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
+                <LinearLayout
+
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Budget"/>
+                    android:layout_marginBottom="12dp"
+                    android:animateLayoutChanges="true"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_margin="4dp"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:clickable="true"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:scaleType="center"
-                    android:tint="#888"
-                    android:src="@drawable/ic_mode_edit_black_24dp"/>
+                    <TextView
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        android:text="Budget"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="17200"
+                        android:textSize="16sp" />
+
+                    <ImageView
+                        android:id="@+id/ovEditButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_mode_edit_black_24dp"
+                        android:tint="#888" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="6dp">
+
+                    <TextView
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        android:text="Expense"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="15000"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        android:text="Savings"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="1200"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
             </LinearLayout>
 
-            <FrameLayout
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#8888"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"
-                android:text="Budget"/>
-
-            <FrameLayout
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#8888"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:textAlignment="center"
-                android:layout_height="wrap_content"
-                android:text="Budget"/>
-
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,10 +110,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-
         </LinearLayout>
 
-    </LinearLayout>
+    </io.codetail.widget.RevealLinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/ovAddCategoryBtn"
@@ -94,10 +120,97 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|center_horizontal"
         android:layout_margin="@dimen/default_gap"
-        app:fabSize="normal"
         android:src="@drawable/ic_add_black_24dp"
         android:tint="#FFF"
+        app:fabSize="normal"
         app:layout_anchor="@+id/ovContainer"
         app:layout_anchorGravity="bottom|right" />
+
+    <io.codetail.widget.RevealFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <FrameLayout
+            android:id="@+id/revealFrame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@color/gray">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/revealCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:cardElevation="3dp"
+                app:contentPadding="16dp"
+                app:layout_anchor="@id/budgetContainer"
+                app:layout_anchorGravity="top">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Set your initial budget"
+                            android:textSize="15sp" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end">
+
+
+                        <TextView
+                            android:id="@+id/ovSaveButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:clickable="true"
+                            android:paddingBottom="4dp"
+                            android:paddingEnd="10dp"
+                            android:paddingLeft="4dp"
+                            android:paddingRight="10dp"
+                            android:paddingStart="4dp"
+                            android:paddingTop="10dp"
+                            android:text="Save"
+                            android:textAllCaps="true"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/ovCancelButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:clickable="true"
+                            android:paddingBottom="4dp"
+                            android:paddingEnd="10dp"
+                            android:paddingLeft="4dp"
+                            android:paddingRight="10dp"
+                            android:paddingStart="4dp"
+                            android:paddingTop="10dp"
+                            android:text="Cancel"
+                            android:textAllCaps="true" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+
+        </FrameLayout>
+
+
+    </io.codetail.widget.RevealFrameLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
