--- a/app/src/main/res/layout/item_budget_category.xml
+++ b/app/src/main/res/layout/item_budget_category.xml
@@ -1,43 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_marginTop="7dp"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="4dp"
     android:layout_marginStart="4dp"
-    app:cardElevation="2dp"
-    android:layout_height="wrap_content">
-
+    android:layout_marginTop="7dp"
+    android:orientation="vertical"
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:animateLayoutChanges="true"
-            android:orientation="horizontal"
-            >
-
-            <EditText
-                android:id="@+id/ovCategoryText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginStart="4dp"
-                android:textSize="12sp"
-                android:hint="Category"
-                android:visibility="gone" />
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/ovCategoryLabel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginStart="8dp"
+                android:layout_weight="1"
                 android:maxLines="1"
                 android:text="Category"
                 android:textSize="12sp" />
@@ -46,21 +35,10 @@
                 android:id="@+id/ovCategoryEdit"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:scaleType="center"
-                android:clickable="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:scaleType="center"
                 android:src="@drawable/ic_mode_edit_black_24dp"
-                android:tint="#888" />
-
-            <ImageView
-                android:id="@+id/ovCategoryDone"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:scaleType="center"
-                android:clickable="true"
-                android:visibility="gone"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_done_black_24dp"
                 android:tint="#888" />
 
         </LinearLayout>
@@ -75,30 +53,28 @@
                 android:id="@+id/ovBudgetMinus"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:scaleType="center"
-                android:clickable="true"
-                android:foregroundTint="#f00"
                 android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:scaleType="center"
                 android:src="@drawable/ic_remove_circle_outline_black_24dp"
                 android:tint="#888" />
 
-            <EditText
+            <TextView
                 android:id="@+id/ovBudgetText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginStart="4dp"
-                android:textSize="12sp"
-                android:hint="Budget"/>
+                android:layout_weight="1"
+                android:text="Budget"
+                android:textSize="12sp" />
 
             <ImageView
                 android:id="@+id/ovBudgetPlus"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:scaleType="center"
-                android:clickable="true"
-                android:backgroundTint="#f00"
                 android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:scaleType="center"
                 android:src="@drawable/ic_add_circle_outline_black_24dp"
                 android:tint="#888" />
 
